# python-template

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/template/: __init__.py  command_line.py
tests/: test_template.py
