#
# Build system requirements
#
[build-system]

requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

#
#
# Basic project metadata
#
[project]

name = "template"

description = "A Python project template"

readme = "README.md"

requires-python = ">=3.6"

license = {file = "LICENSE"}

keywords = [
  "template", 
  "python", 
  "project"
]

authors = [
  {name = "Aaron A. Aaronson", email = "aaron.aaronson@example.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "numpy"
]

dynamic = [
  "version"
]

#
# Project urls
#
[project.urls]

"Source" = "https://github.com/rosalindfranklininstitute/python-template"
"Tracker" = "https://github.com/rosalindfranklininstitute/python-template/issues"

#
# Project additional optional dependencies
#
[project.optional-dependencies]

test = [
  "pytest",
  "pytest-cov",
]

#
# Project command line scripts
#
[project.scripts]

python-template = "template.command_line:main"

#
# Configure setup tools
#
[tool.setuptools.packages.find]

where = ["src"]

#
# Set the package version from git tag
#
[tool.setuptools.dynamic]

version = {attr = "template._version.__version__"}

#
# Configure setuptools-scm to generate version file
#
[tool.setuptools_scm]

write_to = "src/template/_version.py"

#
# Configure pytest
#
[tool.pytest.ini_options]

addopts = "--cov=src --cov-report term --cov-report html"

testpaths = [ "tests" ]
